--- a/web/index.html
+++ b/web/index.html
@@ -16,7 +16,7 @@
       <li><a class="menutab hovmenu" id="nav_gg" title="GosuGamers Matches" href="#gg_acc_matches" data-toggle="tab">GG</a></li>
       <li><a class="menutab hovmenu" id="nav_stream" title="Streams and VODs" title="News" href="#streams_vods" data-toggle="tab"><i class="icon-play"></i></a></li>
       <li><a class="menutab hovmenu" id="nav_sett" title="Settings" href="#settings" data-toggle="tab"><i class="icon-wrench"></i></a></li>
-      <li><a class="" id="nav_outpost" data-target="#" href="http://www.stay22.com/search?cid=oe&did=1&utm_source=d2mt&utm_medium=rowClick&utm_campaign=Dota2MatchTicker" target="_blank" data-toggle="tooltip" title="The cheapest way to stay for the upcoming DotA2 TI5 Championships" data-placement="bottom"><img src="img/sleeping.png" alt=""></a></li>
+      <li><a class="menutab hovmenu" id="nav_stay22" title="The cheapest way to stay for the upcoming DotA2 TI5 Championships" href="#stay22" data-toggle="tab"><img class="stay22img" src="img/stay22.png" alt="stay22 icon"></a></li>
       <li><a class="menutab" id="nav_update" title="Refresh" href="#"><i class="icon-refresh"></i></a></li>
     </ul>
   </div>
@@ -67,13 +67,11 @@
           </div>
         </div>
 
-
     <!-- ========================= Streams/VODs Tab ========================= -->
     <div class="tab-pane alignborder" id="streams_vods">
       <ul class="nav nav-tabs">
         <li class="active"><a class="submenu sub-tabs-top ph-tabstop ph-tableft" data-toggle="tab" href="#streams">Live Streams &nbsp;<span title="Go to: http://www.twitch.tv/directory/game/Dota%202" data-link="http://www.twitch.tv/directory/game/Dota%202" href="#" class="permalink"><i class="icon-share"></i></span></a></li>
         <li><a class="submenu sub-tabs-top ph-tabstop" data-toggle="tab" href="#dota2vods">VODs &nbsp;<span title="Go to: http://www.dotacinema.com/vods" data-link="http://www.dotacinema.com/vods" href="#" class="permalink"><i class="icon-share"></i></span></a></li>
-        <li><a class="submenu sub-tabs-top ph-tabstop" data-toggle="tab" href="#vods">YT</a></li>
       </ul>
       <div class="tab-content">
         <div class="tab-pane active" id="streams">
@@ -89,13 +87,12 @@
             </tbody>
           </table>
         </div>
-        <div class="tab-pane" id="vods">
-          <table id="vodsList" class="table table-hover table-condensed">
-            <tbody class="listload" id="tbody_vods">
-            </tbody>
-          </table>
-        </div>
       </div>
+    </div>
+
+    <!-- ========================= Stay22 ========================= -->
+    <div class="tab-pane alignborder" id="stay22">
+      <iframe width="100%" height="400" src="https://www.stay22.com/embed/the-international-dota" frameborder="0" allowfullscreen></iframe><div><strong><a href="https://www.stay22.com/events/the-international-dota?promptembed=true" target="_blank">Embed this map in your site!</a></strong></div>
     </div>
 
     <!-- ========================= SETTIGNS ==================== -->
