--- a/web/index.html
+++ b/web/index.html
@@ -92,7 +92,7 @@
 
     <!-- ========================= Stay22 ========================= -->
     <div class="tab-pane alignborder" id="stay22">
-      <iframe width="100%" height="400" src="https://www.stay22.com/embed/the-international-dota" frameborder="0" allowfullscreen></iframe><div><strong><a href="https://www.stay22.com/events/the-international-dota?promptembed=true" target="_blank">Embed this map in your site!</a></strong></div>
+      <iframe id="stay22iframe" width="100%" height="400" src="" frameborder="0" allowfullscreen></iframe><div><strong><a href="https://www.stay22.com/events/the-international-dota?promptembed=true" target="_blank">Embed this map in your site!</a></strong></div>
     </div>
 
     <!-- ========================= SETTIGNS ==================== -->
@@ -155,7 +155,7 @@
               <tbody>
                 <tr>
                   <td><b>Version:</b></td>
-                  <td>1.7.6 - <a href="https://github.com/wololodev/d2mt/blob/master/CHANGELOG.md" target="_blank">View changelog</a></td>
+                  <td>1.7.8 - <a href="https://github.com/wololodev/d2mt/blob/master/CHANGELOG.md" target="_blank">View changelog</a></td>
                 </tr>
                 <tr>
                   <td><b>Author:</b></td>
