--- a/web/index.html
+++ b/web/index.html
@@ -16,7 +16,7 @@
       <li><a class="menutab hovmenu" id="nav_gg" title="GosuGamers Matches" href="#gg_acc_matches" data-toggle="tab">GG</a></li>
       <li><a class="menutab hovmenu" id="nav_stream" title="Streams and VODs" title="News" href="#streams_vods" data-toggle="tab"><i class="icon-play"></i></a></li>
       <li><a class="menutab hovmenu" id="nav_sett" title="Settings" href="#settings" data-toggle="tab"><i class="icon-wrench"></i></a></li>
-      <li><a class="menutab hovmenu" id="nav_stay22" title="The cheapest way to stay for the upcoming DotA2 TI5 Championships" href="#stay22" data-toggle="tab"><img class="stay22img" src="img/stay22.png" alt="stay22 icon"></a></li>
+      <li><a class="menutab hovmenu" id="nav_stay22" title="The cheapest way to stay for the upcoming ESL One NYC DotA2 Tournament" href="#stay22" data-toggle="tab"><img class="stay22img" src="https://www.stay22.com/images/esl-one.png" alt="stay22 icon"></a></li>
       <li><a class="menutab" id="nav_update" title="Refresh" href="#"><i class="icon-refresh"></i></a></li>
     </ul>
   </div>
@@ -92,7 +92,7 @@
 
     <!-- ========================= Stay22 ========================= -->
     <div class="tab-pane alignborder" id="stay22">
-      <iframe id="stay22iframe" width="100%" height="400" src="" frameborder="0" allowfullscreen></iframe><div><strong><a href="https://www.stay22.com/events/the-international-dota?promptembed=true" target="_blank">Embed this map in your site!</a></strong></div>
+      <iframe id="stay22iframe" width="100%" height="400" src="" frameborder="0" allowfullscreen></iframe><div><strong><a href="https://www.stay22.com/events/esl-one-nyc-2015" target="_blank">ESL One New York 2015 hotels and accommodation on Stay22</a></strong></div>
     </div>
 
     <!-- ========================= SETTIGNS ==================== -->
