--- a/web/index.html
+++ b/web/index.html
@@ -16,7 +16,7 @@
       <li><a class="menutab hovmenu" id="nav_gg" title="GosuGamers Matches" href="#gg_acc_matches" data-toggle="tab">GG</a></li>
       <li><a class="menutab hovmenu" id="nav_stream" title="Streams and VODs" title="News" href="#streams_vods" data-toggle="tab"><i class="icon-play"></i></a></li>
       <li><a class="menutab hovmenu" id="nav_sett" title="Settings" href="#settings" data-toggle="tab"><i class="icon-wrench"></i></a></li>
-      <li><a class="menutab hovmenu" id="nav_stay22" title="The cheapest way to stay for the upcoming Star Ladder Season 13" href="#stay22" data-toggle="tab"><img class="stay22img" src="https://i.imgur.com/oRdA8Gi.png" alt="stay22 Star Ladder icon"></a></li>
+      <li><a class="menutab hovmenu" id="nav_stay22" title="The cheapest way to stay for the upcoming Shanghai Major 2016" href="#stay22" data-toggle="tab"><img class="stay22img" src="https://i.imgur.com/cwahZ2n.png" alt="stay22 Shanghai Major icon"></a></li>
       <li><a class="menutab" id="nav_update" title="Refresh" href="#"><i class="icon-refresh"></i></a></li>
     </ul>
   </div>
@@ -92,7 +92,7 @@
 
     <!-- ========================= Stay22 ========================= -->
     <div class="tab-pane alignborder" id="stay22">
-      <iframe id="stay22iframe" width="100%" height="400" src="" frameborder="0"></iframe><div><strong><a href="https://www.stay22.com/embed/dota-starseries-season" target="_blank">Star Ladder Star Series accommodation on Stay22</a></strong></div>
+      <iframe id="stay22iframe" width="100%" height="400" src="" frameborder="0"></iframe><div><strong><a href="https://www.stay22.com/embed/the-shanghai-major" target="_blank">The Shanghai Major accommodation on Stay22</a></strong></div>
     </div>
 
     <!-- ========================= SETTIGNS ==================== -->
