--- a/web/index.html
+++ b/web/index.html
@@ -16,8 +16,7 @@
       <li><a class="menutab hovmenu" id="nav_gg" title="GosuGamers Matches" href="#gg_acc_matches" data-toggle="tab">GG</a></li>
       <li><a class="menutab hovmenu" id="nav_stream" title="Streams and VODs" title="News" href="#streams_vods" data-toggle="tab"><i class="icon-play"></i></a></li>
       <li><a class="menutab hovmenu" id="nav_sett" title="Settings" href="#settings" data-toggle="tab"><i class="icon-wrench"></i></a></li>
-      <li><a class="menutab hovmenu" id="nav_stay22" title="The cheapest way to stay for the upcoming EPICENTER 2016" href="#stay22" data-toggle="tab"><img class="stay22img" src="https://i.imgur.com/P5qhMyR.png" alt="stay22 EPICENTER DotA2 icon"></a></li>
-      <!-- <li><a class="menutab hovmenu" id="nav_stay22" title="The cheapest way to stay for the upcoming Manila Major 2016" href="#stay22" data-toggle="tab"><img class="stay22img" src="https://i.imgur.com/pP149gE.png" alt="stay22 Shanghai Major icon"></a></li> -->
+      <li><a class="menutab hovmenu" id="nav_stay22" title="The cheapest way to stay for the upcoming International 2016" href="#stay22" data-toggle="tab"><img class="stay22img" src="img/sleeping.png" alt="stay22 DotA2 icon"></a></li>
       <li><a class="menutab" id="nav_update" title="Refresh" href="#"><i class="icon-refresh"></i></a></li>
     </ul>
   </div>
@@ -93,8 +92,7 @@
 
     <!-- ========================= Stay22 ========================= -->
     <div class="tab-pane alignborder" id="stay22">
-      <iframe id="stay22iframe" width="100%" height="400" src="" frameborder="0"></iframe><div><strong><a href="https://www.stay22.com/embed/epicenter-dota2-2016" target="_blank">The EPICENTER accommodations on Stay22</a></strong></div>
-      <!-- <iframe id="stay22iframe" width="100%" height="400" src="" frameborder="0"></iframe><div><strong><a href="https://www.stay22.com/embed/the-manila-dota2-major-by-pgl" target="_blank">The Manila Major accommodations on Stay22</a></strong></div> -->
+      <iframe id="stay22iframe" width="100%" height="400" src="" frameborder="0"></iframe><div><strong><a href="https://www.stay22.com/embed/the-international-2016" target="_blank">The International 2016 accommodations on Stay22</a></strong></div>
     </div>
 
     <!-- ========================= SETTIGNS ==================== -->
